// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Channels /> expanded with chat channels should render and test snapshot 1`] = `
<div
  class="chatchannels"
>
  <div
    class="chatchannels__channelslist"
    id="chatchannels__channelslist"
  >
    <button
      class="chatchanneltabbutton"
      data-channel-slug="@0"
      onClick={[Function]}
      type="button"
    >
      <span
        class="chatchanneltab chatchanneltab--inactive chatchanneltab--old"
        data-channel-slug="@0"
        style={
          Object {
            "border": "1px solid undefined",
            "boxShadow": "3px 3px 0px undefined",
          }
        }
      >
        <span
          class="chatchanneltabindicator chatchanneltabindicator--old"
          data-channel-slug="@0"
        >
          <img
            alt="pic"
            class="chatchanneltabindicatordirectimage invert-channel-image"
          />
        </span>
        channel name 1
      </span>
    </button>
    <button
      class="chatchanneltabbutton"
      data-channel-slug="@1"
      onClick={[Function]}
      type="button"
    >
      <span
        class="chatchanneltab chatchanneltab--inactive chatchanneltab--old"
        data-channel-slug="@1"
        style={
          Object {
            "border": "1px solid undefined",
            "boxShadow": "3px 3px 0px undefined",
          }
        }
      >
        <span
          class="chatchanneltabindicator chatchanneltabindicator--old"
          data-channel-slug="@1"
        >
          <img
            alt="pic"
            class="chatchanneltabindicatordirectimage"
          />
        </span>
        group channel 2
      </span>
    </button>
    <button
      class="chatchanneltabbutton"
      data-channel-slug="@2"
      onClick={[Function]}
      type="button"
    >
      <span
        class="chatchanneltab chatchanneltab--inactive chatchanneltab--old"
        data-channel-slug="@2"
        style={
          Object {
            "border": "1px solid undefined",
            "boxShadow": "3px 3px 0px undefined",
          }
        }
      >
        <span
          class="chatchanneltabindicator chatchanneltabindicator--old"
          data-channel-slug="@2"
        >
          <img
            alt="pic"
            class="chatchanneltabindicatordirectimage invert-channel-image"
          />
        </span>
        group channel 3
      </span>
    </button>
  </div>
  <div
    class="chatchannels__config"
  >
    <img
      alt=""
      src=""
      style={
        Object {
          "height": "18px",
        }
      }
    />
    <div
      class="chatchannels__configmenu"
    >
      <a
        href="/settings"
      >
        DEV Settings
      </a>
      <a
        href="/report-abuse"
      >
        Report Abuse
      </a>
    </div>
  </div>
</div>
`;

exports[`<Channels /> expanded without chat channels should render and test snapshot 1`] = `
<div
  class="chatchannels"
>
  <div
    class="chatchannels__channelslist"
    id="chatchannels__channelslist"
  >
    <div
      class="chatchannels__channelslistheader"
    >
      <span
        aria-label="emoji"
        role="img"
      >
        👋
      </span>
       Welcome to
      <b>
         DEV Connect
      </b>
      ! You may message anyone you mutually follow.
    </div>
  </div>
  <div
    class="chatchannels__config"
  >
    <img
      alt=""
      src=""
      style={
        Object {
          "height": "18px",
        }
      }
    />
    <div
      class="chatchannels__configmenu"
    >
      <a
        href="/settings"
      >
        DEV Settings
      </a>
      <a
        href="/report-abuse"
      >
        Report Abuse
      </a>
    </div>
  </div>
</div>
`;

exports[`<Channels /> not expanded with chat channels should render and test snapshot 1`] = `
<div
  class="chatchannels"
>
  <div
    class="chatchannels__channelslist"
    id="chatchannels__channelslist"
  >
    <button
      class="chatchanneltabbutton"
      data-channel-slug="@0"
      onClick={[Function]}
      type="button"
    >
      <span
        class="chatchanneltab chatchanneltab--inactive chatchanneltab--old"
        data-channel-slug="@0"
        style={
          Object {
            "border": "1px solid undefined",
            "boxShadow": "3px 3px 0px undefined",
          }
        }
      >
        <span
          class="chatchanneltabindicator chatchanneltabindicator--old"
          data-channel-slug="@0"
        >
          <img
            alt="pic"
            class="chatchanneltabindicatordirectimage invert-channel-image"
          />
        </span>
        channel name 1
      </span>
    </button>
    <button
      class="chatchanneltabbutton"
      data-channel-slug="@1"
      onClick={[Function]}
      type="button"
    >
      <span
        class="chatchanneltab chatchanneltab--inactive chatchanneltab--old"
        data-channel-slug="@1"
        style={
          Object {
            "border": "1px solid undefined",
            "boxShadow": "3px 3px 0px undefined",
          }
        }
      >
        <span
          class="chatchanneltabindicator chatchanneltabindicator--old"
          data-channel-slug="@1"
        >
          <img
            alt="pic"
            class="chatchanneltabindicatordirectimage"
          />
        </span>
        group channel 2
      </span>
    </button>
    <button
      class="chatchanneltabbutton"
      data-channel-slug="@2"
      onClick={[Function]}
      type="button"
    >
      <span
        class="chatchanneltab chatchanneltab--inactive chatchanneltab--old"
        data-channel-slug="@2"
        style={
          Object {
            "border": "1px solid undefined",
            "boxShadow": "3px 3px 0px undefined",
          }
        }
      >
        <span
          class="chatchanneltabindicator chatchanneltabindicator--old"
          data-channel-slug="@2"
        >
          <img
            alt="pic"
            class="chatchanneltabindicatordirectimage invert-channel-image"
          />
        </span>
        group channel 3
      </span>
    </button>
  </div>
</div>
`;

exports[`<Channels /> not expanded without chat channels should render and test snapshot 1`] = `
<div
  class="chatchannels"
>
  <div
    class="chatchannels__channelslist"
    id="chatchannels__channelslist"
  />
</div>
`;
